--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -4,38 +4,96 @@ import H1 from "./H1.astro";
 import RafaPic from "./Rafa-pic.astro";
 
 const { headerIndex, class: className, ...rest } = Astro.props;
+const { pathname } = Astro.url;
+
+const navObj = [
+  {
+    path: "/",
+    navTitle: "Home",
+    navSubtitle: null,
+  },
+  {
+    path: "/roadmap",
+    navTitle: "Roadmap & Projects",
+    navSubtitle: "to INFINITY and Beyond!",
+  },
+  {
+    path: "/project05",
+    navTitle: "Agendae+",
+    navSubtitle: "System Dev",
+  },
+  {
+    path: "/project04",
+    navTitle: "Medical Records",
+    navSubtitle: "Coder Next.js",
+  },
+  {
+    path: "/project03",
+    navTitle: "Music Store",
+    navSubtitle: "Coder React.js",
+  },
+  {
+    path: "/project02",
+    navTitle: "Bakery LP",
+    navSubtitle: "Coder HTML/SASS/JS",
+  },
+  {
+    path: "/project01",
+    navTitle: "Dance Academy LP",
+    navSubtitle: "Coder HTML/CSS",
+  },
+  {
+    path: "/project00",
+    navTitle: "Portfolio Old",
+    navSubtitle: "Coder HTML/CSS/JS",
+  },
+];
 ---
 
 <style>
   .star-container {
     height: fit-content;
     position: relative;
+    width: 50px;
+    height: 100%;
   }
 
   .star-bar {
     height: 2px;
-    width: 50px;
+    width: 100%;
     background-color: white;
     position: absolute;
     top: 0;
     bottom: 0;
-    right: 4px;
     margin: auto;
   }
 
   .fa-diamond {
     display: block;
+    position: relative;
+    top: 0;
+    bottom: 0;
     margin: auto;
-    font-size: 16px;
+    font-size: 12px;
+    transition: 1s ease;
   }
 
-  
+  .big-diamond {
+    width: fit-content;
+    top: 0;
+    bottom: 0;
+    right: -12px;
+    margin-right: 0;
+    font-size: 20px;
+    transition: 1s ease;
+  }
+
   .li-year,
-      .li-role {
-        font-size: 12px;
-        line-height: 1.8;
-        display: block;
-      }
+  .li-role {
+    font-size: 12px;
+    line-height: 1.8;
+    display: block;
+  }
 </style>
 
 <header class={className} {...rest}>
@@ -111,138 +169,29 @@ const { headerIndex, class: className, ...rest } = Astro.props;
           <RafaPic class=" w-4/6 m-auto" />
           <nav class="pb-24 relative z-50">
             <ul>
-              <li>
-                <a
-                  href="/"
-                  class="text-2xl min-xl:text-xl font-bold flex flex-nowrap justify-between items-center gap-4"
-                >
-                  <p class="flex gap-1 items-end">
-                    Home <span class="li-role" />
-                  </p>
-                  <div class="star-container">
-                    <>
+              {navObj.map((ele) => (
+                <li>
+                  {ele.path === "/project05" && <p class="li-role">2023</p>}
+                  {ele.path === "/project03" && <p class="li-role">2022</p>}
+                  <a
+                    href={ele.path}
+                    class="text-xl min-xl:text-xl font-bold flex flex-nowrap justify-between items-center gap-4"
+                  >
+                    <p class="flex gap-1 items-end">
+                      {ele.navTitle}{" "}
+                      <span class="li-role">{ele.navSubtitle} </span>
+                    </p>
+                    <div class="star-container">
                       <div class="star-bar" />
-                      <i class="fa-solid fa-diamond" />
-                    </>
-                  </div>
-                </a>
-              </li>
-              <li>
-                <a
-                  href="/roadmap"
-                  class="text-2xl min-xl:text-xl font-bold flex flex-nowrap justify-between items-center gap-4"
-                >
-                  <p class="flex gap-1 items-end">
-                    RoadMap & Projects</br>
-                    <span class="li-role">"to INFINITY and Beyond!"</span>
-                  </p>
-                  <div class="star-container">
-                    <>
-                      <div class="star-bar" />
-                      <i class="fa-solid fa-diamond" />
-                    </>
-                  </div>
-                </a>
-              </li>
-              <li class="li-year">2023</li>
-              <li>
-                <a
-                  href="/project05"
-                  class="text-2xl min-xl:text-xl font-bold flex flex-nowrap justify-between items-center gap-4"
-                >
-                  <p class="flex gap-1 items-end">
-                    Agendae+ <span class="li-role">System Dev</span>
-                  </p>
-                  <div class="star-container">
-                    <>
-                      <div class="star-bar" />
-                      <i class="fa-solid fa-diamond" />
-                    </>
-                  </div>
-                </a>
-              </li>
-              <li>
-                <a
-                  href="/project04"
-                  class="text-2xl min-xl:text-xl font-bold flex flex-nowrap justify-between items-center gap-4"
-                >
-                  <p class="flex gap-1 items-end">
-                    Medical Records <span class="li-role">Coder Next.js</span>
-                  </p>
-                  <div class="star-container">
-                    <>
-                      <div class="star-bar" />
-                      <i class="fa-solid fa-diamond" />
-                    </>
-                  </div>
-                </a>
-              </li>
-              <li class="li-year">2022</li>
-              <li>
-                <a
-                  href="/project03"
-                  class="text-2xl min-xl:text-xl font-bold flex flex-nowrap justify-between items-center gap-4"
-                >
-                  <p class="flex gap-1 items-end">
-                    Music Store <span class="li-role">Coder React.js</span>
-                  </p>
-                  <div class="star-container">
-                    <>
-                      <div class="star-bar" />
-                      <i class="fa-solid fa-diamond" />
-                    </>
-                  </div>
-                </a>
-              </li>
-              <li>
-                <a
-                  href="/project02"
-                  class="text-2xl min-xl:text-xl font-bold flex flex-nowrap justify-between items-center gap-4"
-                >
-                  <p class="flex gap-1 items-end">
-                    Bakery LP <span class="li-role">Coder HTML/CSS/JS</span>
-                  </p>
-                  <div class="star-container">
-                    <>
-                      <div class="star-bar" />
-                      <i class="fa-solid fa-diamond" />
-                    </>
-                  </div>
-                </a>
-              </li>
-              <li>
-                <a
-                  href="/project01"
-                  class="text-2xl min-xl:text-xl font-bold flex flex-nowrap justify-between items-center gap-4"
-                >
-                  <p class="flex gap-1 items-end">
-                    Dance School LP
-                    <span class="li-role">Coder HTML/CSS/JS</span>
-                  </p>
-                  <div class="star-container">
-                    <>
-                      <div class="star-bar" />
-                      <i class="fa-solid fa-diamond" />
-                    </>
-                  </div>
-                </a>
-              </li>
-              <li>
-                <a
-                  href="/oldportfolio"
-                  class="text-2xl min-xl:text-xl font-bold flex flex-nowrap justify-between items-center gap-4"
-                >
-                  <p class="flex gap-1 items-end">
-                    Portfolio v1 <span class="li-role">Coder HTML/CSS/JS</span>
-                  </p>
-                  <div class="star-container">
-                    <>
-                      <div class="star-bar" />
-                      <i class="fa-solid fa-diamond" />
-                    </>
-                  </div>
-                </a>
-              </li>
+                      <i
+                        class={`fa-solid fa-diamond ${
+                          pathname === ele.path && "big-diamond"
+                        } `}
+                      />
+                    </div>
+                  </a>
+                </li>
+              ))}
             </ul>
           </nav>
         </>
