--- a/src/components/H1.astro
+++ b/src/components/H1.astro
@@ -10,8 +10,8 @@ const { text, index } = Astro.props;
 <h1
   class:list={[
     index
-      ? "text-6xl font-bold min-xl:text-5xl"
-      : "text-3xl font-bold min-xl:text-2xl absolute -left-32 top-80 m-auto w-96 -rotate-90",
+      ? "text-5xl max-lg:text-4xl max-md:text-3xl font-bold"
+      : "text-3xl max-lg:text-xl max-md:text-lg font-bold max-xl:text-2xl m-auto ",
   ]}
 >
   {text}
