--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -11,7 +11,7 @@ interface Props {
   headerIndex?: boolean;
 }
 
-const { title, description,headerIndex } = Astro.props;
+const { title, description, headerIndex } = Astro.props;
 
 import { getCollection } from "astro:content";
 const projects = await getCollection("projects");
@@ -42,30 +42,43 @@ const projects = await getCollection("projects");
   </head>
 
   <body
-    class={`grid grid-cols-12 ${headerIndex && "clr-bg"} overflow-y-hidden`}
+    class={`grid grid-cols-12 ${
+      headerIndex && "clr-bg max-lg:flex max-lg:flex-col-reverse"
+    } overflow-y-hidden h-screen`}
   >
-    <!-- <Image
-      src="/Images/stars-bg.svg"
-      width={1920}
-      height={1080}
-      format="svg"
-      alt="stars bg"
-      class="fixed w-screen z-50"
-    /> -->
-    <Header
-      headerIndex={headerIndex}
-      class={`relative w-full h-screen col-start-1 ${
-        headerIndex ? "col-span-5" : "col-span-4"
-      } clr-bg pt-8 grid grid-cols-5`}
-    />
-    <Main
-      projects={projects}
-      class={`relative w-full h-screen ${
-        headerIndex ? "col-span-7" : "col-span-8 overflow-y-scroll pt-32"
-      }  max-md:px-24 css-no-scrollbar grid grid-cols-8 `}
-    >
-      <slot />
-    </Main>
+    {
+      headerIndex && (
+        <>
+          <Header
+            headerIndex={headerIndex}
+            class={`relative w-full h-screen col-start-1 col-span-5 clr-bg pt-8 grid grid-cols-8 max-lg:h-auto max-lg:flex-1 max-lg:grid-cols-12`}
+          />
+          <Main
+            projects={projects}
+            class={`relative w-full h-fit m-auto col-span-7 css-no-scrollbar max-lg:flex-1`}          >
+            <slot />
+          </Main>
+        </>
+      )
+    }
+
+    {
+      !headerIndex && (
+        <>
+          <Header
+            headerIndex={headerIndex}
+            class={`relative w-full h-screen col-start-1 col-span-3 max-lg:col-span-3 clr-bg pt-8 grid grid-cols-5 max-lg:h-auto`}
+          />
+          <Main
+            projects={projects}
+            class={`relative w-full h-screen col-span-9 overflow-y-scroll pt-32 max-md:px-24 css-no-scrollbar grid grid-cols-12`}
+          >
+            <slot />
+          </Main>
+        </>
+      )
+    }
+
     <!-- <Footer/> -->
     <style is:global>
       :root {
@@ -80,6 +93,7 @@ const projects = await getCollection("projects");
         );
 
         --clr-bg: #0f2132;
+        --clr-charchoal: #333333;
         --clr-coder: #00d9f7;
         --clr-sys: #ff9900;
       }
@@ -125,7 +139,7 @@ const projects = await getCollection("projects");
       html,
       body {
         font-family: "Roboto", sans-serif;
-        color: #333333;
+        color: var(--clr-charchoal);
       }
 
       a:hover {
@@ -190,7 +204,5 @@ const projects = await getCollection("projects");
         display: none;
       } /* Hide scrollbar for IE, Edge, and Firefox */
     </style>
-
-
   </body>
 </html>
