--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,49 +5,12 @@ import RafaPic from "../components/Rafa-pic.astro";
 ---
 
 <Layout title="Hirashiki Rafael's Nifty Journey on the web" headerIndex={true}>
-  <div class="relative col-span-8">
-    <!-- <div class="absolute z-30 top-0 bottom-0 left-0 right-0 h-fit h-6/6">
-      <Image
-        src="/Images/stars-right-index.svg"
-        width={1000}
-        height={1000}
-        format="svg"
-        alt="web development applications icons and logos"
-        class=""
-      />
-    </div> -->
     <Image
       src="/Images/index-rafa2.png"
-      width={1000}
-      height={1000}
+      width={1100}
+      height={940}
       format="png"
       alt="web development applications icons and logos"
-      class="fixed top-0 bottom-0 right-0 m-auto w-8/12"
+      class="m-auto w-full max-lg:max-w-3xl max-lg:mr-0 max-md:w-6/6"
     />
-    <!-- <RafaPic
-      class="css-photo_div absolute z-20 -top-40 bottom-0 left-0 right-52 m-auto h-fit w-5/12"
-    />
-    <div
-      class="absolute z-30 top-0 bottom-0 left-0 right-24 m-auto h-fit max-w-fit w-6/6"
-    >
-      <Image
-        src="/Images/logos.png"
-        width={750}
-        height={750}
-        format="png"
-        alt="web development applications icons and logos"
-        class=""
-      />
-    </div>
-    <div class="fixed z-10 top-0 -bottom-60  right-0  m-auto h-fit w-6/6 overflow-hidden">
-      <Image
-        src="/Images/index-waves.png"
-        width={1280}
-        height={634}
-        format="png"
-        alt="stars bg"
-        class=""
-      />
-    </div> -->
-  </div>
 </Layout>
