--- a/src/components/ProjectLayout-Links.astro
+++ b/src/components/ProjectLayout-Links.astro
@@ -14,8 +14,8 @@ const { project, road } = Astro.props;
   <div class="relative">
     <Image
       src={!road
-        ? "/Images/stars-topright-black.png"
-        : "/Images/stars-topright-road.png"}
+        ? "/Images/stars-topright-black.svg"
+        : "/Images/stars-topright-road.svg"}
       width={!road ? 700 : 260}
       height={!road ? 800 : 560}
       format="png"
