--- a/src/components/ProjectLayout.astro
+++ b/src/components/ProjectLayout.astro
@@ -17,6 +17,7 @@ console.log(project.data.thumbnail_extra);
 <Layout>
   <ProjectLayoutLinks project={project}/>
   <div class="col-start-3 col-span-9 relative">
+    <img src="/Images/stars-border.svg" class="absolute -top-2 -right-2"/>
     <img src={`/Images/${project.data.thumbnail}.jpg`} />
     <slot/>
     <p class="py-4">{project.data.projectSubtitle}</p>
