--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -68,7 +68,7 @@ const projects = await getCollection("projects");
           />
           <Main
             projects={projects}
-            class={`relative w-full h-screen col-span-9 max-lg:col-start-1 max-lg:col-span-full overflow-y-scroll pt-32 css-no-scrollbar grid grid-cols-12`}
+            class={`relative w-full h-screen pb-8  col-span-9 max-lg:col-start-1 max-lg:col-span-full overflow-y-scroll pt-32 css-no-scrollbar grid grid-cols-12`}
           >
             <slot />
           </Main>
