--- a/src/components/ProjectLayout.astro
+++ b/src/components/ProjectLayout.astro
@@ -12,23 +12,67 @@ console.log(project.data.thumbnail_extra);
   .fa-brands {
     font-size: 50px;
   }
+  .v-bar,
+  .h-bar {
+    position: absolute;
+    bottom: 0;
+    right: 10px;
+    background-color: var(--clr-bg);
+  }
+  .v-bar {
+    width: 3px;
+    height: 98%;
+  }
+  .h-bar {
+    width: 98%;
+    height: 3px;
+  }
+  .star {
+    position: absolute;
+    width: 20px;
+  }
+  .star-btm {
+    bottom: -8px;
+  }
+  .start-top {
+    top: 10px;
+  }
+
+  .star-right {
+    right: 2px;
+  }
+
+  .start-left {
+    left: -12px;
+  }
 </style>
 
 <Layout>
-  <ProjectLayoutLinks project={project}/>
+  <ProjectLayoutLinks project={project} />
   <div class="col-start-3 col-span-9 relative">
-    <img src="/Images/stars-border.svg" class="absolute -top-2 -right-2"/>
+    <div class="absolute h-2/3 w-10/12 -bottom-4 -right-8">
+      <img src="/Images/square.svg" class="star start-top star-right" />
+      <div class="v-bar"></div>
+      <div class="h-bar"></div>
+      <img src="/Images/square.svg" class="star star-btm star-left" />
+      <img src="/Images/square.svg" class="star star-btm star-right" />
+    </div>
+
     <img src={`/Images/${project.data.thumbnail}.jpg`} />
-    <slot/>
+    <slot />
     <p class="py-4">{project.data.projectSubtitle}</p>
-    <ul class={`font-bold py-8 w-fit m-auto ${!sysdev ? "brand-blue" : "brand-orange"} `}>
+    <ul
+      class={`font-bold py-8 w-fit m-auto ${
+        !sysdev ? "brand-blue" : "brand-orange"
+      } `}
+    >
       {
         project.data.projectBulletList.map((option: string) => (
           <li>❍ {option}</li>
         ))
       }
     </ul>
-    <div class="grid grid-cols-2 gap-4 ">
+    <div class="grid grid-cols-2 gap-4">
       {
         project.data.thumbnail_extra?.map((ele: string, index: number) => (
           <Image
